Fix overflow on small screens

--- a/assets/css/_sass/_post.scss
+++ b/assets/css/_sass/_post.scss
@@ -13,6 +13,25 @@ figure {
     color: #999;
     font-size: .875rem;
   }
+
+  &.video-container {
+    max-width: 560px;
+
+    & > div {
+      position: relative;
+      padding-bottom: 56.25%; // 16:9
+      height: 0;
+      overflow: hidden;
+
+      iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
 }
 
 .uk-comment-header {
